unpackaged/main/default/objects/UniqueEntry__FieldMap__c/UniqueEntry__FieldMap__c.object-meta.xml
<CustomObject>
    <label>FieldMap</label>
    <nameField>
        <label>FieldMap Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>FieldMaps</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>