unpackaged/main/default/objects/UniqueEntry__FieldMap__c/fields/UniqueEntry__Active__c.field-meta.xml
<CustomField>
    <fullName>UniqueEntry__Active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>