unpackaged/main/default/objects/UniqueEntry__FieldMap__c/fields/UniqueEntry__Identifier__c.field-meta.xml
<CustomField>
    <fullName>UniqueEntry__Identifier__c</fullName>
    <label>Identifier</label>
    <length>75</length>
    <type>Text</type>
</CustomField>