unpackaged/main/default/objects/UniqueEntry__FieldMap__c/fields/UniqueEntry__Path__c.field-meta.xml
<CustomField>
    <fullName>UniqueEntry__Path__c</fullName>
    <label>Path</label>
    <length>255</length>
    <type>Text</type>
</CustomField>